<resources>
    <string name="app_name">Органайзер</string>
    <string name="login">Вход</string>
    <string name="register">Регистрация</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="password_confirm">Подтверждение пароля</string>
    <string name="registration_consent">Я согласен на обработку персональных данных</string>
    <string name="error_name_length">Имя: от 2 до 30 символов</string>
    <string name="error_name_chars">Имя: только буквы, пробелы и дефис</string>
    <string name="error_name_invalid">Укажите корректное имя</string>
    <string name="error_email_format">Укажите почту в формате user@domain.tld</string>
    <string name="error_password_min">Пароль: не менее 6 символов</string>
    <string name="error_password_mismatch">Пароли не совпадают</string>
    <string name="error_consent_required">Нужно принять согласие</string>
    <string name="sign_in">Войти</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="no_account">Нет аккаунта? Зарегистрироваться</string>
    <string name="have_account">Уже есть аккаунт? Войти</string>
    <string name="error_fill_fields">Заполните все поля</string>
    <string name="error_invalid_credentials">Неверная почта или пароль</string>
    <string name="error_email_exists">Пользователь с такой почтой уже есть</string>
    <string name="error_register">Не удалось зарегистрироваться</string>
    <string name="tab_tasks">Задачи</string>
    <string name="tab_calendar">Календарь</string>
    <string name="tab_profile">Профиль</string>
    <string name="task_title">Название</string>
    <string name="task_description">Описание</string>
    <string name="task_due">Дата и время</string>
    <string name="reminder">Напоминание</string>
    <string name="reminder_none">Без напоминания</string>
    <string name="reminder_5">За 5 минут</string>
    <string name="reminder_15">За 15 минут</string>
    <string name="reminder_30">За 30 минут</string>
    <string name="reminder_60">За 1 час</string>
    <string name="save">Сохранить</string>
    <string name="add_task">Новая задача</string>
    <string name="edit_task">Редактировать задачу</string>
    <string name="delete">Удалить</string>
    <string name="edit">Изменить</string>
    <string name="tasks_empty">Нет задач. Нажмите, чтобы добавить.</string>
    <string name="tasks_add_hint">Нажмите, чтобы добавить новую задачу</string>
    <string name="delete_task_confirm">Удалить эту задачу?</string>
    <string name="important">Важная</string>
    <string name="important_with_star">★ Важная</string>
    <string name="notification_channel_tasks">Задачи</string>
    <string name="notification_task_reminder">Напоминание о задаче</string>
    <string name="prev_month">Предыдущий месяц</string>
    <string name="next_month">Следующий месяц</string>
    <string name="tasks_for_day">Задачи на день</string>
    <string name="add_task_for_day">Добавить задачу</string>
    <string name="profile_name">Имя пользователя</string>
    <string name="notifications_enabled">Уведомления</string>
    <string name="theme_dark">Тёмная тема</string>
    <string name="my_data">Мои данные</string>
    <string name="registered_at">Дата регистрации</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="clear_all_data">Очистить все данные</string>
    <string name="clear_all_confirm">Удалить все задачи и заметки? Профиль сохранится.</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="avatar_choose">Аватар</string>
    <string name="avatar_gallery">Из галереи</string>
    <string name="avatar_presets">Стандартные</string>
    <string name="notes">Заметки</string>
    <string name="note_title">Заголовок</string>
    <string name="note_content">Текст</string>
    <string name="add_note">Добавить заметку</string>
    <string name="permission_notifications">Разрешите уведомления для напоминаний</string>
    <string name="tags">Теги</string>
    <string name="tag_name">Название тега</string>
    <string name="add">Добавить</string>
    <string name="manage_tags">Список тегов</string>
    <string name="tags_stats">Теги и количество задач</string>
    <string name="tag_pick_color">Выберите цвет тега</string>
    <string name="attach_from_gallery">Из галереи</string>
    <string name="take_photo">С камеры</string>
    <string name="error_image_attach">Не удалось прикрепить изображение</string>
</resources>
